--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:29:50 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:30:33 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -342,10 +342,10 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +2
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
-      <td class="greyout">Jon Rahm +2
-Not started</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -412,22 +412,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 8</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -8
@@ -441,6 +425,22 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +4
 E thru 8</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 8</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -470,8 +470,8 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods +1
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
-Not started</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +3
++1 thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -566,8 +566,8 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods(W) +1
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-Not started</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 1</td>
       <td class="greyout">Viktor Hovland +4
 E thru 8</td>
     </tr>
@@ -612,10 +612,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Rory McIlroy +2
+      <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -668,22 +668,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td>Viktor Hovland +4
-E thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">1</td>
       <td>Collin Morikawa -1
@@ -716,35 +700,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">1</td>
-      <td>Collin Morikawa(W) -1
+      <td>Scottie Scheffler -8
 Not started</td>
-      <td>Justin Thomas -1
+      <td>Jon Rahm(W) +2
 Not started</td>
-      <td>Tiger Woods +1
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td>Viktor Hovland +4
 E thru 8</td>
-      <td class="greyout">Gary Woodland
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 8</td>
-      <td class="greyout">Xander Schauffele(W)
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,16 +732,48 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Tiger Woods +1
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 8</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 8</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Jon Rahm(W) +2
 Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -781,15 +781,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Rory McIlroy(W) +2
-Not started</td>
       <td>Jon Rahm +2
 Not started</td>
+      <td>Rory McIlroy(W) +3
++1 thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +4
 E thru 8</td>
       <td class="greyout">Jordan Spieth
@@ -828,38 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Patrick Cantlay(W) +1
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td>Bubba Watson +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 8</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">4</td>
       <td>Collin Morikawa -1
@@ -872,6 +840,38 @@ Not started</td>
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Patrick Cantlay(W) +1
+Not started</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">5</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Jon Rahm(W) +2
+Not started</td>
+      <td>Bubba Watson +2
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 8</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
