--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:29:50 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:30:33 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,22 +220,6 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Joaquin Niemann -1
-Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 6</td>
-      <td class="greyout">Viktor Hovland +4
-E thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
@@ -252,20 +236,20 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
 Not started</td>
-      <td>Collin Morikawa -1
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Patrick Cantlay +1
+      <td>Joaquin Niemann -1
 Not started</td>
-      <td>Rory McIlroy +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td>Tommy Fleetwood(W) +3
+E thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout">Viktor Hovland +4
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -281,6 +265,22 @@ E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Rory McIlroy +3
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
